write a little html layout

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>PoP Vlog - Control</h1>
+
+    <canvas></canvas>
+
+    <p>Use the keyboard to move the red square.</p>
+
     <script src="script.js"></script>
   </body>
 </html>
